Fixed container-fluid layout issues

--- a/less/custom/main.less
+++ b/less/custom/main.less
@@ -12,9 +12,6 @@ a {
   &:hover {
     text-decoration: none;
     outline: none;
-    img {
-
-    }
   }
 }
 
@@ -100,11 +97,23 @@ a {
   }
 }
 
-body.home {
-  .container-fluid {
-    padding: 0;
+.container-fluid {
+  .row {
+    [class*=col] {
+      padding-left: 0;
+      padding-right: 0;
+    }
   }
+}
+
+body.home {
   section {
+    &.page {
+      .container {
+        background-color: @white;
+        padding: @grid-gutter-width;
+      }
+    }
     .page-title {
       padding-top: @grid-gutter-width / 6;
     }
@@ -114,15 +123,8 @@ body.home {
       }
     }
     &#about {
-      padding: @grid-gutter-width;
-      margin: @grid-gutter-width 0;
-      background-color: @well-bg;
       color: @palette-5;
       border-radius: @border-radius-base;
-      background-image: url('/wp-content/themes/deverati/img/dist/responsive-design-white.svg');
-      background-repeat: no-repeat;
-      background-position: 720px 20px;
-      background-size: 320px;
       text-align: center;
       .page-title {
         width: 33px;
@@ -166,14 +168,13 @@ body.home {
       }
     }
     &#case-studies {
-      padding: @grid-gutter-width 0 @grid-gutter-width * 2 0;
+      text-align: center;
       .page-title {
         margin: 0 auto @grid-gutter-width auto;
         display: block;
         color: @contact-color;
       }
       .btn {
-        .pull-right;
         margin: @grid-gutter-width * 1.5 0 @grid-gutter-width 0;
       }
     }
@@ -182,6 +183,9 @@ body.home {
       background-color: @contact-bg;
       color: @contact-color;
       text-align: center;
+      .container {
+        background-color: @contact-bg;
+      }
       a {
         color: @contact-link-color;
       }
@@ -261,6 +265,11 @@ ul.project-technologies {
     .menu {
       .pull-right();
       margin: 0;
+    }
+  }
+  #case-studies {
+    .btn {
+      .pull-right;
     }
   }
 }
