--- a/less/custom/slider.less
+++ b/less/custom/slider.less
@@ -57,7 +57,7 @@
 
 @media (min-width: @screen-md-min) {
   #projects-slick {
-    margin: 0 @grid-gutter-width + 25;
+    margin: @grid-gutter-width @grid-gutter-width + 25;
     .slick-slide {
       height: 400px;
       padding: @grid-gutter-width;
@@ -85,7 +85,7 @@
 @media (min-width: @screen-lg-min) {
   #slideshow {
     .slick-slide {
-      background-position: -30px -310px;
+      // background-position: -30px -310px;
     }
   }
 }
